--- a/MoneyPool/Base.lproj/Main.storyboard
+++ b/MoneyPool/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MoneyPool" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="MainViewController" customModule="MoneyPool" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,10 +16,40 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GAl-3C-bDH">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PoolTableViewCell" rowHeight="78" id="pB0-Zx-Ia1">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pB0-Zx-Ia1" id="p1J-13-bk2">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="77.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="InvitaionTableViewCell" rowHeight="78" id="cjh-f8-jLO">
+                                        <rect key="frame" x="0.0" y="106" width="600" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cjh-f8-jLO" id="dz1-61-90v">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="77.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GAl-3C-bDH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="53e-9q-ALm"/>
+                            <constraint firstAttribute="trailing" secondItem="GAl-3C-bDH" secondAttribute="trailing" id="VJ3-Fs-RPy"/>
+                            <constraint firstItem="GAl-3C-bDH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="exY-Jb-Ko8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="GAl-3C-bDH" secondAttribute="bottom" id="wUy-yH-uBW"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="OXq-VI-LW9">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="mQC-6u-soG">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="mQC-6u-soG">
                             <connections>
                                 <segue destination="ToM-J7-kLG" kind="show" id="82m-L9-d9c"/>
                             </connections>
