--- a/MoneyPool/Menu.storyboard
+++ b/MoneyPool/Menu.storyboard
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rfX-WC-XRU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rfX-WC-XRU">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Profile-->
+        <scene sceneID="oUa-sm-hjS">
+            <objects>
+                <viewController id="1H7-Q4-ICw" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Wa8-iQ-Eat"/>
+                        <viewControllerLayoutGuide type="bottom" id="VfI-nB-eIq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="efH-bv-6Ak">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="oQ3-9m-QeX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ueQ-IZ-4d8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3587" y="-1150"/>
+        </scene>
+        <!--Payment-->
         <scene sceneID="c4p-jl-PvC">
             <objects>
                 <viewController id="zP3-9b-GW2" sceneMemberID="viewController">
@@ -18,7 +38,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="rjs-r1-O3t"/>
+                    <tabBarItem key="tabBarItem" title="Payment" id="rjs-r1-O3t"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xop-8e-mfq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -35,11 +55,122 @@
                     </tabBar>
                     <connections>
                         <segue destination="zP3-9b-GW2" kind="relationship" relationship="viewControllers" id="ibk-N6-62Y"/>
+                        <segue destination="1H7-Q4-ICw" kind="relationship" relationship="viewControllers" id="jjM-4U-64C"/>
+                        <segue destination="ywZ-ZK-68h" kind="relationship" relationship="viewControllers" id="8Et-t9-Kq2"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dAK-2M-Ibb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2894" y="-497"/>
+        </scene>
+        <!--Add more Friends!-->
+        <scene sceneID="o8F-kG-asJ">
+            <objects>
+                <viewController id="ywZ-ZK-68h" customClass="addNewFriendsViewController" customModule="MoneyPool" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Q5i-Zw-eLr"/>
+                        <viewControllerLayoutGuide type="bottom" id="SLT-bT-Egh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2Ts-GV-kUf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" placeholder="Search by username" translatesAutoresizingMaskIntoConstraints="NO" id="tsA-q3-Ivk">
+                                <rect key="frame" x="0.0" y="70" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="wwv-5S-5Aa"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="ywZ-ZK-68h" id="sIW-51-Dyp"/>
+                                </connections>
+                            </searchBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find your Friends!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gxm-3P-aJM">
+                                <rect key="frame" x="201" y="20" width="199" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="s4t-uz-ets">
+                                <rect key="frame" x="0.0" y="114" width="600" height="486"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="70" id="Lt4-Mw-Blf" customClass="addNewFriendsTableViewCell" customModule="MoneyPool" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="70"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lt4-Mw-Blf" id="f4c-Hh-HzX">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="69"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktb-Lw-xUs">
+                                                    <rect key="frame" x="72" y="23" width="345" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SwU-WH-oFJ">
+                                                    <rect key="frame" x="442" y="20" width="150" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="150" id="tiz-Qp-gY8"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Add Friend"/>
+                                                    <connections>
+                                                        <action selector="addRemoveFriendButtonPushed:" destination="Lt4-Mw-Blf" eventType="touchUpInside" id="X0x-KT-NTn"/>
+                                                        <action selector="inviteFriendButtonPushed:" destination="Lt4-Mw-Blf" eventType="touchUpInside" id="DgF-BQ-7tt"/>
+                                                    </connections>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4UU-Oj-lO4">
+                                                    <rect key="frame" x="8" y="7" width="55" height="55"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="55" id="RD6-er-aOv"/>
+                                                        <constraint firstAttribute="height" constant="55" id="WWA-Uo-jih"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="SwU-WH-oFJ" firstAttribute="leading" secondItem="ktb-Lw-xUs" secondAttribute="trailing" constant="25" id="8b4-4g-Xmm"/>
+                                                <constraint firstItem="SwU-WH-oFJ" firstAttribute="trailing" secondItem="f4c-Hh-HzX" secondAttribute="trailingMargin" id="XDd-pf-Yxv"/>
+                                                <constraint firstItem="ktb-Lw-xUs" firstAttribute="leading" secondItem="4UU-Oj-lO4" secondAttribute="trailing" constant="9" id="sAm-Rg-PoA"/>
+                                                <constraint firstItem="SwU-WH-oFJ" firstAttribute="centerY" secondItem="f4c-Hh-HzX" secondAttribute="centerY" id="ucV-NV-sly"/>
+                                                <constraint firstItem="4UU-Oj-lO4" firstAttribute="centerY" secondItem="f4c-Hh-HzX" secondAttribute="centerY" id="uzB-Dq-iJc"/>
+                                                <constraint firstItem="ktb-Lw-xUs" firstAttribute="centerY" secondItem="f4c-Hh-HzX" secondAttribute="centerY" id="wB3-fg-N3D"/>
+                                                <constraint firstItem="4UU-Oj-lO4" firstAttribute="leading" secondItem="f4c-Hh-HzX" secondAttribute="leading" constant="8" id="wFt-Tj-IDo"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="addRemoveFriendButton" destination="SwU-WH-oFJ" id="jiT-1R-mOl"/>
+                                            <outlet property="friendImageView" destination="4UU-Oj-lO4" id="VRZ-Of-B73"/>
+                                            <outlet property="friendNameLabel" destination="ktb-Lw-xUs" id="UhA-C3-NKv"/>
+                                            <outlet property="inviteFriendButton" destination="SwU-WH-oFJ" id="R6b-Zv-gr7"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="s4t-uz-ets" firstAttribute="leading" secondItem="tsA-q3-Ivk" secondAttribute="leading" id="213-4v-8MO"/>
+                            <constraint firstItem="tsA-q3-Ivk" firstAttribute="leading" secondItem="2Ts-GV-kUf" secondAttribute="leading" id="5Hd-is-fRH"/>
+                            <constraint firstItem="tsA-q3-Ivk" firstAttribute="top" secondItem="Gxm-3P-aJM" secondAttribute="bottom" constant="20" id="6Um-xg-VyN"/>
+                            <constraint firstItem="Gxm-3P-aJM" firstAttribute="top" secondItem="Q5i-Zw-eLr" secondAttribute="bottom" id="UFA-3U-naH"/>
+                            <constraint firstAttribute="trailing" secondItem="tsA-q3-Ivk" secondAttribute="trailing" id="Zq7-f7-oRa"/>
+                            <constraint firstItem="Gxm-3P-aJM" firstAttribute="centerX" secondItem="tsA-q3-Ivk" secondAttribute="centerX" id="kgb-4r-m57"/>
+                            <constraint firstItem="s4t-uz-ets" firstAttribute="top" secondItem="tsA-q3-Ivk" secondAttribute="bottom" id="r8t-6m-Qfd"/>
+                            <constraint firstItem="s4t-uz-ets" firstAttribute="trailing" secondItem="tsA-q3-Ivk" secondAttribute="trailing" id="sbz-fn-pfT"/>
+                            <constraint firstItem="Gxm-3P-aJM" firstAttribute="centerX" secondItem="2Ts-GV-kUf" secondAttribute="centerX" id="tY3-cd-HD2"/>
+                            <constraint firstItem="s4t-uz-ets" firstAttribute="bottom" secondItem="SLT-bT-Egh" secondAttribute="top" id="xsu-Gc-34a"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="C5l-xV-6Ug"/>
+                    <navigationItem key="navigationItem" title="Add more Friends!" id="1UR-T3-rxh"/>
+                    <connections>
+                        <outlet property="searchBar" destination="tsA-q3-Ivk" id="rBv-Rh-zod"/>
+                        <outlet property="tableView" destination="s4t-uz-ets" id="ML0-Rw-RIB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TLv-n8-BgZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4259" y="-307"/>
         </scene>
     </scenes>
 </document>
